# pyproject.toml
[project]
name = "comfyui-int8-fast-fork"
description = "Standalone INT8 toolkit for ComfyUI with stock MODEL adapter support, unified INT8 LoRA nodes, and additional low-VRAM fixes."
version = "0.1.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/SparknightLLC/ComfyUI-INT8-Toolkit"

[tool.comfy]
PublisherId = "sparknight"
DisplayName = "ComfyUI-INT8-Toolkit"
